--- a/paper/cfs-model-refs.bib
+++ b/paper/cfs-model-refs.bib
@@ -281,3 +281,108 @@
   pages={9},
   year={2019}
 }
+
+@article{smaldino2017,
+  title={Models are stupid, and we need more of them},
+  author={Smaldino, Paul E},
+  journal={Computational social psychology},
+  pages={311--331},
+  year={2017},
+  publisher={Routledge New York, NY}
+}
+
+
+@article{allen2016,
+  title={Modeling sustainable food systems},
+  author={Allen, Thomas and Prosperi, Paolo},
+  journal={Environmental Management},
+  volume={57},
+  number={5},
+  pages={956--975},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{nerlove1958,
+  title={Adaptive expectations and cobweb phenomena},
+  author={Nerlove, Marc},
+  journal={The Quarterly Journal of Economics},
+  volume={72},
+  number={2},
+  pages={227--240},
+  year={1958},
+  publisher={MIT Press}
+}
+
+@article{meadows1971,
+  title={Dynamics of commodity production cycles.},
+  author={Meadows, Dennis L},
+  journal={Dynamics of commodity production cycles.},
+  year={1971},
+  publisher={Cambridge, Mass.: Wright-Allen Press}
+}
+
+@book{sterman2000,
+  title={Business dynamics},
+  author={Sterman, John},
+  year={2000},
+  publisher={Irwin/McGraw-Hill c2000..}
+}
+
+@article{chung2018,
+  title={System Dynamics Modelling and Simulation of the Malaysian Rice Value Chain: Effects of the Removal of Price Controls and an Import Monopoly on Rice Prices and Self-sufficiency Levels in Malaysia},
+  author={Chung, Bonhee},
+  journal={Systems Research and Behavioral Science},
+  volume={35},
+  number={3},
+  pages={248--264},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{deGoede2013,
+  title={Robust agriculture: Balancing between vulnerability and stability},
+  author={De Goede, DM and Gremmen, B and Blom-Zandstra, M},
+  journal={NJAS-Wageningen Journal of Life Sciences},
+  volume={64},
+  pages={1--7},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{legrand2019,
+  title={The empirical merit of structural explanations of commodity price volatility: Review and perspectives},
+  author={Legrand, Nicolas},
+  journal={Journal of Economic Surveys},
+  volume={33},
+  number={2},
+  pages={639--664},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@misc{AHDBeuroexhange2015,
+  title = {{How does the exchange rate affect the GB pig price?}},
+  author = {AHDB},
+  year = {2015},
+  howpublished = {\url{https://pork.ahdb.org.uk/prices-stats/news/2015/august/how-does-the-exchange-rate-affect-the-gb-pig-price/}},
+  note = {Accessed: 2020-07-08}
+}
+
+@article{pimm1984,
+  title={The complexity and stability of ecosystems},
+  author={Pimm, Stuart L},
+  journal={Nature},
+  volume={307},
+  number={5949},
+  pages={321--326},
+  year={1984},
+  publisher={Nature Publishing Group}
+}
+
+@book{ottoday2011,
+  title={A biologist's guide to mathematical modeling in ecology and evolution},
+  author={Otto, Sarah P and Day, Troy},
+  year={2011},
+  publisher={Princeton University Press}
+}
